--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Type: Package
 Title: Fetch literature data from pubmed, google scholar and RSS
 Version: 0.1.0
 Imports: tibble, dplyr, purrr, xml2, stringr, tidyr, rvest,jsonlite,lubridate, httr
-Author: Miao Yu
+Authors@R: person(given = "Miao", family = "YU",
+        role = c("aut", "cre"), 
+        email = "yufreecas@gmail.com",
+        comment = c(ORCID = "0000-0002-2804-6014"))
 Maintainer: Miao Yu <yufreecas@gmail.com>
 Description: 
     Fetch literature data from pubmed and google scholar in a tidyverse way. This package is written under tidyverse frame.
